--- a/excursion.html
+++ b/excursion.html
@@ -42,7 +42,7 @@
     <div class="supporting">
       <div class="container">
         <p>
-          <img class="app" src="https://s3.amazonaws.com/codecademy-content/projects/excursion/binoculars.png" />
+          <img class="app" src="binoculars.png" />
         </p>
         <h2>Available for iPhone and Android</h2>
         <a class="btn" href="#">Download Excursion</a>
