Fixed video link

--- a/excursion.html
+++ b/excursion.html
@@ -10,7 +10,7 @@
     <div class="main">    
       
       <video autoplay muted loop>
-        <source src="https://s3.amazonaws.com/codecademy-content/projects/excursion/bg.mp4" type="video/mp4">
+        <source src="bg.mp4" type="video/mp4">
       </video>
       
       <div class="content container">
